--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@ nav a {
 }
 .overlay_text {
     position:absolute;
+    display:inline-block;
+    width: 50%;
     font-family: Verdana;
     font-weight: bold;
     font-size: xx-large;
@@ -76,3 +78,23 @@ nav a {
     top: 20%;
     left: 10%;
 }
+.overlay_text div{
+    /* form on right side  */
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    font-weight: lighter;
+}
+  
+  label {
+    display: inline-block;
+    width: 100px;
+    margin-top: 20px;
+  }
+  
+  input[type="text"],
+  input[type="number"],
+  select {
+    width: 200px;
+    padding: 5px;
+  }
